tests/snapshots/gateway/studio/vfs_root_entries_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/../../../tests/unit/gateway/studio/support.rs
expression: value
---
{
  "entries": [
    {
      "contentType": null,
      "isDir": true,
      "name": "blueprints",
      "path": "blueprints",
      "projectName": null,
      "rootLabel": null,
      "size": 0
    },
    {
      "contentType": null,
      "isDir": true,
      "name": "docs",
      "path": "docs",
      "projectName": "kernel",
      "rootLabel": "docs",
      "size": 0
    },
    {
      "contentType": null,
      "isDir": true,
      "name": "internal_skills",
      "path": "internal_skills",
      "projectName": "kernel",
      "rootLabel": "internal_skills",
      "size": 0
    },
    {
      "contentType": null,
      "isDir": true,
      "name": "knowledge",
      "path": "knowledge",
      "projectName": null,
      "rootLabel": null,
      "size": 0
    }
  ]
}
