tests/snapshots/gateway/studio/vfs_scan_roots_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/../../../tests/unit/gateway/studio/support.rs
expression: value
---
{
  "dirCount": 5,
  "entries": [
    {
      "category": "folder",
      "contentType": null,
      "hasFrontmatter": false,
      "isDir": true,
      "name": "blueprints",
      "path": "blueprints",
      "projectName": null,
      "rootLabel": null,
      "size": 0,
      "wendaoId": null
    },
    {
      "category": "doc",
      "contentType": "text/plain",
      "hasFrontmatter": false,
      "isDir": false,
      "name": "default.bpmn",
      "path": "blueprints/default.bpmn",
      "projectName": null,
      "rootLabel": null,
      "size": 8,
      "wendaoId": null
    },
    {
      "category": "folder",
      "contentType": null,
      "hasFrontmatter": false,
      "isDir": true,
      "name": "docs",
      "path": "docs",
      "projectName": "kernel",
      "rootLabel": "docs",
      "size": 0,
      "wendaoId": null
    },
    {
      "category": "doc",
      "contentType": "text/markdown",
      "hasFrontmatter": false,
      "isDir": false,
      "name": "guide.md",
      "path": "docs/guide.md",
      "projectName": "kernel",
      "rootLabel": "docs",
      "size": 16,
      "wendaoId": null
    },
    {
      "category": "folder",
      "contentType": null,
      "hasFrontmatter": false,
      "isDir": true,
      "name": "internal_skills",
      "path": "internal_skills",
      "projectName": "kernel",
      "rootLabel": "internal_skills",
      "size": 0,
      "wendaoId": null
    },
    {
      "category": "folder",
      "contentType": null,
      "hasFrontmatter": false,
      "isDir": true,
      "name": "writer",
      "path": "internal_skills/writer",
      "projectName": "kernel",
      "rootLabel": "internal_skills",
      "size": 0,
      "wendaoId": null
    },
    {
      "category": "skill",
      "contentType": "text/markdown",
      "hasFrontmatter": true,
      "isDir": false,
      "name": "SKILL.md",
      "path": "internal_skills/writer/SKILL.md",
      "projectName": "kernel",
      "rootLabel": "internal_skills",
      "size": 21,
      "wendaoId": null
    },
    {
      "category": "folder",
      "contentType": null,
      "hasFrontmatter": false,
      "isDir": true,
      "name": "knowledge",
      "path": "knowledge",
      "projectName": null,
      "rootLabel": null,
      "size": 0,
      "wendaoId": null
    },
    {
      "category": "knowledge",
      "contentType": "text/markdown",
      "hasFrontmatter": false,
      "isDir": false,
      "name": "context.md",
      "path": "knowledge/context.md",
      "projectName": null,
      "rootLabel": null,
      "size": 18,
      "wendaoId": null
    }
  ],
  "fileCount": 4
}
