tests/snapshots/gateway/studio/workspace_flight_service_route_contracts.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/search/handlers/flight.rs
expression: value
---
[
  {
    "descriptorPath": [
      "vfs",
      "resolve"
    ],
    "endpointCount": 1,
    "path": "docs/alpha.md",
    "route": "/vfs/resolve",
    "schemaLength": 448,
    "ticket": "/vfs/resolve"
  },
  {
    "descriptorPath": [
      "graph",
      "neighbors"
    ],
    "direction": "both",
    "endpointCount": 1,
    "hops": 1,
    "limit": 20,
    "nodeId": "kernel/docs/alpha.md",
    "route": "/graph/neighbors",
    "schemaLength": 1088,
    "ticket": "/graph/neighbors"
  }
]
